[tool.poetry]
name = "job-scraper"
version = "0.1.0"
description = "Job board scraper for multiple platforms"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "utils"}, {include = "config"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
yagooglesearch = "^1.0.2"
supabase = "^2.3.0"
python-dotenv = "^1.0.0"
flask = "^3.0.0"
gunicorn = "^21.2.0"
logging = "^0.4.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scraper = "app:perform_task"
