[tool.poetry]
name = "job-scraper"
version = "0.1.0"
description = "Automated job scraper with intelligent proxy management"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "utils"}, {include = "config"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
yagooglesearch = "^1.10.0"
python-dotenv = "^1.0.0"
supabase = "^2.3.0"
Flask = "^3.0.0"
httpx = ">=0.24.0,<0.25.0"
python-dateutil = "^2.8.2"
boto3 = "^1.34.0"
pycountry = "^22.3.5"
pytz = "^2023.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scraper = "app:perform_task"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
